Network mixing, splitting

--- a/journal/202102.md
+++ b/journal/202102.md
@@ -253,13 +253,13 @@ Nodes: Throughout February there was around 220 reachable nodes according to [dc
 
 [charts.dcr.farm](https://charts.dcr.farm/) has been shut down due to low demand and high operating costs to keep it running in a sustainable way. We thank the operators ({}) for all the network insights shared over the years. dcr.farm's legacy and new [VSP](https://dcr.farm/) is still operational.
 
+The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom=jzk7rn6n-kmfblq6m&bin=day&axis=time&visibility=true-true-true) has grown from 31% to 38% in Feb alone, possibly thanks to the GUI for it added in v1.6.
+
 Decred's [Lightning Network](https://ln-map.jamieholdstock.com/) had 30 nodes (+2), 56 channels (+9) with a total capacity of 16.8 DCR (+8.5), as of Mar 1.
 
-https://www.reddit.com/r/decred/comments/lj2her/og_ticket/gnj3zqq/
+@matheusd shared some ticket splitting [stats](https://www.reddit.com/r/decred/comments/lj2her/og_ticket/gnj3zqq/): over almost 3 years 2,679 split tickets were purchased at an average rate of 81/month, meaning that roughly 0.2% tickets are being split. This was discussed in context of v1.6 and the new vspd staking where ticket splitting is currently not supported. A new protocol and a rewrite of both server and client are required to support it with vspd, which is unlikely to happen at this time given the low demand.
 
 { add some numbers on vspd upgrade here or in Integ }
-
-{ mixed % }
 
 ## Integrations
 
