--- a/journal/202102.md
+++ b/journal/202102.md
@@ -259,17 +259,13 @@ Decred's [Lightning Network](https://ln-map.jamieholdstock.com/) had 30 nodes (+
 
 @matheusd shared some ticket splitting [stats](https://www.reddit.com/r/decred/comments/lj2her/og_ticket/gnj3zqq/): over almost 3 years 2,679 split tickets were purchased at an average rate of 81/month, meaning that roughly 0.2% tickets are being split. This was discussed in context of v1.6 and the new vspd staking where ticket splitting is currently not supported. A new protocol and a rewrite of both server and client are required to support it with vspd, which is unlikely to happen at this time given the low demand.
 
-{ add some numbers on vspd upgrade here or in Integ }
-
 ## Integrations
 
-{ hint: new pieces of infrastructure or updates from existing: VSPs, exchanges, wallets, OTC desks, payment processors. use bullets or paragraphs, whatever looks best }
+Three VSPs have enabled support for the new vspd staking: [decredvoting.com](https://decredvoting.com/), [ibitlin.com](https://dcrpool.ibitlin.com/), and [coinmine.pl](https://vsp.coinmine.pl). We now have a total of 11 vspd instances and 17 legacy VSP instances.
 
-{ check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
+The [VSP listing](https://decred.org/vsp/) was updated to show vspd tickets in addition to the legacy ones. As of Mar 1, vspd servers held 4.4K live tickets, or 11% of the target ticket pool. Legacy VSP servers held 6.5K live tickets, or 16% of the target.
 
-{ check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
-
-{ announce #services room! }
+A new [#services]({}) public chat room welcomes everyone to collect information about the growing Decred ecosystem (exchanges, payment processors, VSPs - anything).
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
