--- a/journal/202102.md
+++ b/journal/202102.md
@@ -217,16 +217,13 @@ Notable changes detected for the [tracked](https://github.com/decredcommunity/so
 
 In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,444 DCR and spent 3,010 DCR (actually payments didn't go out until Mar 2). Using February's daily average DCR/USD rate of $113.76, this is $1.2M received and $342K spent. At January's average daily rate of $54.25, the USD figure billed for past work is $163K. As of Mar 3, Treasury balance is 653,000 DCR (97.2 million USD at $148.86).
 
-After the record-breaking turnout for two proposals at the start of Feb (covered in the [last issue](202101.md)), the rest of the month was relatively quiet, with two further proposals being approved.
+After the record-breaking turnout for two proposals at the start of Feb (covered in the [last issue](202101.md#governance)), the rest of the month was relatively quiet, with two further proposals being approved.
 
 - The Decred Journal 2021 [proposal](https://proposals.decred.org/proposals/1d74b88) was approved with 92.4% Yes votes and turnout of 51%, thanks to all the stakeholders who voted for the Journal's first solo proposal! The amount of funding requested for the year is $39,000, and it also covers Politeia Digest and all of the associated design work.
 
 - The Open Source Research 2021 [proposal](https://proposals.decred.org/proposals/020b8b0) from @richard-red was approved with 75.4% Yes votes and turnout of 60% - the requested budget has increased to $40,000, and $9,150 of this is set aside for the expansion of @bee's open data collection initiative. 
 
-{ mention finished props briefly? }
-
-- thank you note https://twitter.com/in_insaf/status/1359255063580057602
-- rejected but record high turnout https://twitter.com/Ammarooni/status/1359352089714061313 + requesting honest feedback { twitter + mx contacts }
+@ammarooni posted a [reflection](https://twitter.com/Ammarooni/status/1359352089714061313) on his book [proposal](https://proposals.decred.org/proposals/9e1d644) and is looking for some honest feedback. { mx contact }
 
 ## Network
 
