Outreach first pass

--- a/journal/202102.md
+++ b/journal/202102.md
@@ -259,29 +259,21 @@ A new [#services]({}) public chat room welcomes everyone to collect information 
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
-## Adoption
-
-{ new merchants }
-
-{ applications of Decred blockchain and related projects: Politeia, dcrtime, atomicswap }
-
-{ investment adoption }
-
 ## Outreach
 
-https://www.reddit.com/r/CryptoCurrency/comments/lqlone/decred_ama_ask_us_about_privacy_daos_lightning/
-
-{ #Decred5Years }
+Several Decred contributors answered all kinds of questions in Decred AMA on [r/CryptoCurrency](https://www.reddit.com/r/CryptoCurrency/comments/lqlone/decred_ama_ask_us_about_privacy_daos_lightning/). The thread got 171 comment and 140 upvotes.
 
 @elima\_iii has started the second season of Decred in Depth series, featuring new guests and more community engagement. Questions to guests are collected [on Twitter](https://twitter.com/elima_iii/status/1363280047059132417) (even more for the [@matheusd](https://twitter.com/elima_iii/status/1365424755906670595) episode), video of bost host and guest is available and YouTube is the primary location now.
 
-https://github.com/decredcommunity/proposals/blob/master/proposals/2bf72e/updates/20210208.md
+@pavel shared an [updated](https://github.com/decredcommunity/proposals/blob/master/proposals/2bf72e/updates/20210208.md) for the withDecred [proposal](https://proposals.decred.org/proposals/2bf72e6):
 
-Monde PR’s achievements for February:
+> Due to the massive price action in last weeks, I've suspended the giveaways as it seems no longer necessary to generate social buzz. At the time of activity, [@withDecred](https://twitter.com/withdecred) Twitter account had around 100K impressions monthly and generated some good conversations (and some shilling as well). (...) I'm now thinking how to go forward from here with WithDecred activities (web + Twitter), for the moment I'm supporting community-created content. If you have some suggestions, feel free to ping me [here]({}) or on [Twitter](https://twitter.com/paveldcr).
 
-- Created/pitched three stories to finance and crypto publications
-- Responded to three requests for comments
-- Secured two media interviews
+Monde PR's achievements for February:
+
+- created/pitched 3 stories to finance and crypto publications
+- responded to 3 requests for comments
+- secured 2 media interviews
 
 ## Events
 
