stuff from chats

--- a/journal/202102.md
+++ b/journal/202102.md
@@ -20,6 +20,8 @@ https://twitter.com/decredproject/status/1364636813168693252
 
 https://github.com/decred/decred-binaries/releases/tag/v1.6.1
 
+https://www.reddit.com/r/decred/comments/m3k31o/161_things_ive_learned/
+
 ## Upcoming Consensus Change
 
 { prepare to vote, set your vote choices for existing tickets and new tickets via dcrwallet|decrediton|legacy vsp }
@@ -223,7 +225,7 @@ After the record-breaking turnout for two proposals at the start of Feb (covered
 
 - The Open Source Research 2021 [proposal](https://proposals.decred.org/proposals/020b8b0) from @richard-red was approved with 75.4% Yes votes and turnout of 60% - the requested budget has increased to $40,000, and $9,150 of this is set aside for the expansion of @bee's open data collection initiative. 
 
-@ammarooni posted a [reflection](https://twitter.com/Ammarooni/status/1359352089714061313) on his book [proposal](https://proposals.decred.org/proposals/9e1d644) and is looking for some honest feedback. { mx contact }
+@ammarooni posted a [reflection](https://twitter.com/Ammarooni/status/1359352089714061313) on his book [proposal](https://proposals.decred.org/proposals/9e1d644) and is looking for some honest feedback.
 
 ## Network
 
@@ -245,7 +247,7 @@ Nodes: Throughout February there was around 220 reachable nodes according to [dc
 
 The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom=jzk7rn6n-kmfblq6m&bin=day&axis=time&visibility=true-true-true) has grown from 31% to 38% in Feb alone, possibly thanks to the GUI for it added in v1.6.
 
-Decred's [Lightning Network](https://ln-map.jamieholdstock.com/) had 30 nodes (+2), 56 channels (+9) with a total capacity of 16.8 DCR (+8.5), as of Mar 1.
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) had 30 nodes (+2), 56 channels (+9) with a total capacity of 16.8 DCR (+8.5), as of Mar 1.
 
 @matheusd shared some ticket splitting [stats](https://www.reddit.com/r/decred/comments/lj2her/og_ticket/gnj3zqq/): over almost 3 years 2,679 split tickets were purchased at an average rate of 81/month, meaning that roughly 0.2% tickets are being split. This was discussed in context of v1.6 and the new vspd staking where ticket splitting is currently not supported. A new protocol and a rewrite of both server and client are required to support it with vspd, which is unlikely to happen at this time given the low demand.
 
@@ -255,7 +257,7 @@ Three VSPs have enabled support for the new vspd staking: [decredvoting.com](htt
 
 The [VSP listing](https://decred.org/vsp/) was updated to show vspd tickets in addition to the legacy ones. As of Mar 1, vspd servers held 4.4K live tickets, or 11% of the target ticket pool. Legacy VSP servers held 6.5K live tickets, or 16% of the target.
 
-A new [#services]({}) public chat room welcomes everyone to collect information about the growing Decred ecosystem (exchanges, payment processors, VSPs - anything).
+A new [#services](https://chat.decred.org/#/room/#services:decred.org) public chat room welcomes everyone to collect information about the growing Decred ecosystem (exchanges, payment processors, VSPs - anything).
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -267,7 +269,7 @@ Several Decred contributors answered all kinds of questions in Decred AMA on [r/
 
 @pavel shared an [updated](https://github.com/decredcommunity/proposals/blob/master/proposals/2bf72e/updates/20210208.md) for the withDecred [proposal](https://proposals.decred.org/proposals/2bf72e6):
 
-> Due to the massive price action in last weeks, I've suspended the giveaways as it seems no longer necessary to generate social buzz. At the time of activity, [@withDecred](https://twitter.com/withdecred) Twitter account had around 100K impressions monthly and generated some good conversations (and some shilling as well). (...) I'm now thinking how to go forward from here with WithDecred activities (web + Twitter), for the moment I'm supporting community-created content. If you have some suggestions, feel free to ping me [here]({}) or on [Twitter](https://twitter.com/paveldcr).
+> Due to the massive price action in last weeks, I've suspended the giveaways as it seems no longer necessary to generate social buzz. At the time of activity, [@withDecred](https://twitter.com/withdecred) Twitter account had around 100K impressions monthly and generated some good conversations (and some shilling as well). (...) I'm now thinking how to go forward from here with WithDecred activities (web + Twitter), for the moment I'm supporting community-created content. If you have some suggestions, feel free to ping me [here](https://chat.decred.org/#/room/#proposals:decred.org) or on [Twitter](https://twitter.com/paveldcr).
 
 Monde PR's achievements for February:
 
@@ -360,7 +362,7 @@ https://twitter.com/_Checkmatey_/status/1358968202898755584 {Gone?}
 
 https://twitter.com/_Checkmatey_/status/1363709306885922826 {Gone?}
 
-{ dcrdex updates, esp. volume }
+Feb's trading volume at [DCRDEX](https://dex.decred.org/) was 390K DCR and 1K BTC. The price varied between 0.0019-0.0030 with the average of 0.0026.
 
 ## Relevant External
 
