--- a/journal/202102.md
+++ b/journal/202102.md
@@ -204,17 +204,6 @@ Community stats as of Mar 1:
 - [LinkedIn](https://www.linkedin.com/company/decredproject) followers: 978 (+16)
 - GitHub [dcrd](https://github.com/decred/dcrd) stars: 584 (+9), forks: 252 (+3)
 
-Notable changes detected for the [tracked](https://github.com/decredcommunity/social-media-stats) accounts:
-
-- Twitter, Reddit, and YouTube listed above all got a higher than usual increase in following and views
-- [CoinMarketCap](https://coinmarketcap.com/currencies/decred/) page got another +3K watchers to 29K
-- [DecredKorea](https://twitter.com/DecredKorea) and [DecredNederland](https://twitter.com/DecredNederland) Twitter accounts have emerged in Jan and started tweeting in Korean and Dutch
-- [DecredDEX](https://twitter.com/DecredDEX) has joined [decredexplorer](https://twitter.com/decredexplorer) and now we have two Twitter accounts focused on specific projects
-- [@Checkmate](https://twitter.com/_Checkmatey_) gained +30% followers (to 5K) and posted 1.2K tweets at a crazy rate of ~41/day
-- [ConsensusRough](https://twitter.com/ConsensusRough) Twitter got +18% followers, to 438
-
-{ move this analysis to Outreach? }
-
 ## Governance
 
 In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,444 DCR and spent 3,010 DCR (actually payments didn't go out until Mar 2). Using February's daily average DCR/USD rate of $113.76, this is $1.2M received and $342K spent. At January's average daily rate of $54.25, the USD figure billed for past work is $163K. As of Mar 3, Treasury balance is 653,000 DCR (97.2 million USD at $148.86).
@@ -270,6 +259,15 @@ Several Decred contributors answered all kinds of questions in Decred AMA on [r/
 @pavel shared an [updated](https://github.com/decredcommunity/proposals/blob/master/proposals/2bf72e/updates/20210208.md) for the withDecred [proposal](https://proposals.decred.org/proposals/2bf72e6):
 
 > Due to the massive price action in last weeks, I've suspended the giveaways as it seems no longer necessary to generate social buzz. At the time of activity, [@withDecred](https://twitter.com/withdecred) Twitter account had around 100K impressions monthly and generated some good conversations (and some shilling as well). (...) I'm now thinking how to go forward from here with WithDecred activities (web + Twitter), for the moment I'm supporting community-created content. If you have some suggestions, feel free to ping me [here](https://chat.decred.org/#/room/#proposals:decred.org) or on [Twitter](https://twitter.com/paveldcr).
+
+Notable changes detected for the [tracked](https://github.com/decredcommunity/social-media-stats) social media accounts:
+
+- project's Twitter, Reddit, and YouTube all got a higher than usual increase in following and views
+- [CoinMarketCap](https://coinmarketcap.com/currencies/decred/) page got another +3K watchers to 29K
+- [DecredKorea](https://twitter.com/DecredKorea) and [DecredNederland](https://twitter.com/DecredNederland) Twitter accounts have emerged in Jan and started tweeting in Korean and Dutch
+- [DecredDEX](https://twitter.com/DecredDEX) has joined [decredexplorer](https://twitter.com/decredexplorer) and now we have two Twitter accounts focused on specific projects
+- [@Checkmate](https://twitter.com/_Checkmatey_) gained +30% followers (to 5K) and posted 1.2K tweets at a crazy rate of ~41/day
+- [ConsensusRough](https://twitter.com/ConsensusRough) Twitter got +18% followers, to 438
 
 Monde PR's achievements for February:
 
