--- a/journal/202102.md
+++ b/journal/202102.md
@@ -292,34 +292,33 @@ Upcoming:
 
 ## Media
 
-{ notable community efforts }
-
-{ ratings news }
-
-{ hint: use the following format: (title in Sentence case) by (author) ([domain](link)) - (optional comment) }
-
 Selected articles:
 
-- Decred v1.6 with co-founder & project lead, Jake Yocom-Piatt ([coinscrum.com](https://www.coinscrum.com/decred-with-jake-yocom-piatt/)) - a Jan video reworked into an article, compares the new treasury code to "minimally complex hardwired smart contact"
+- Decred v1.6 with co-founder & project lead, Jake Yocom-Piatt ([coinscrum.com](https://www.coinscrum.com/decred-with-jake-yocom-piatt/)) - a Jan video reworked into an article, compares the new treasury code to "minimally complex hardwired smart contact" and explains key features of v1.6 in simple terms
 
 Videos:
 
-- Decred Privacy Tutorial: Mix Your Coins by @Exitus ([youtube](https://www.youtube.com/watch?v=QC65PBNwAK4))
-- Insaf Nori Interview Decred in Depth (live) by @elima\_iii ([youtube](https://www.youtube.com/watch?v=hUXk1GWhE-0))
+- Decred News Update - Feb 14th - Massive 1.6 release, vote for $75M DAO, LN, privacy, & more! by @Exitus ([youtube](https://www.youtube.com/watch?v=f2ooNJXpR7I))
+- Decred Privacy Tutorial: Mix your coins by @Exitus ([youtube](https://www.youtube.com/watch?v=QC65PBNwAK4))
+- Insaf Nori interview Decred in Depth (live) by @elima\_iii ([youtube](https://www.youtube.com/watch?v=hUXk1GWhE-0))
+- Being your own bank by Society Decentralised ([youtube](https://www.youtube.com/watch?v=Vb-9vvU0fDU))
+- Decred Price Analysis - 24th February 2021 by Brave New Coin ([youtube](https://www.youtube.com/watch?v=O6iTIABl2Lw))
 
 Audio:
 
-- {}
+- Rough Consensus 17: Spidey reunion. The long lost co-host @mr.black rejoins the pod to talk about crypto and finance. ([libsyn](https://roughconsensus.libsyn.com/episode-17-spidey-reunion))
+- Past Decred in Depth episodes (up to 33rd) have been uploaded to the main YouTube [channel](https://www.youtube.com/decredchannel).
 
 Art and fun:
 
 - @karamble's Decred v1.6 digital [promo](https://twitter.com/karamblez/status/1356921573647745024) clip _(try spotting "taco"!)_
-- https://twitter.com/RichardRed0x/status/1356719226724220930
-- https://www.reddit.com/r/decred/comments/lfxqef/the_rewards/
-- https://twitter.com/LolekBolek74/status/1359866192538787843
-- irresistible https://twitter.com/Decred_ES/status/1358855083396653062
+- glitchy and loud 5th anniversary [clip](https://twitter.com/New_Copernicus/status/1357574854535487488) by @New\_Copernicus
+- the ultimate explanation how [atomic swaps](https://twitter.com/RichardRed0x/status/1356719226724220930) work by @richardred
+- [The Rewards](https://www.reddit.com/r/decred/comments/lfxqef/the_rewards/) by @AGNFAB1
+- "I wish to be [irrisistible](https://twitter.com/Decred_ES/status/1358855083396653062) to men!"
+- introducing [Decred Pączki](https://twitter.com/LolekBolek74/status/1359866192538787843) (doughnuts)
 
-{ another food pic is due }
+{ food pic is due }
 
 Translations:
 
