--- a/journal/202102.md
+++ b/journal/202102.md
@@ -322,11 +322,9 @@ Art and fun:
 
 Translations:
 
-- { ES YT translations }
-
-Other non-English content:
-
-- {}
+- Decred News Update Jan 24 - with [Spanish](https://www.youtube.com/watch?v=Quf8u1Ksm4M) subtitles by @francov\_
+- Building a transparent future with the Decred blockchain - [in Arabic](https://insaf01.github.io/decred-arabic/articles/building-a-transparent-future-with-decred-blockchain.html) by @arij and @abdulrahman4
+- Decred Journal January 2021 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4), Chinese (@Dominic), and Spanish (@francov\_). Thank you all for spreading Decred news!
 
 ## Community Discussions
 
