--- a/journal/202102.md
+++ b/journal/202102.md
@@ -336,8 +336,7 @@ Translations:
 
 Comm systems news:
 
-- there has been an uptick in attempts to scam people. Please be aware that legit team members will never DM you with offers of free money or technical assistance. Pay close attention to user name and ID you chat with and tell your friends to stay vigilant, too.
-- new ways to impersonate in Matrix, pay attention https://twitter.com/GrapheneOS/status/1365881076229488641
+- There have been more attempts to scam people recently. Please remember that real developers or admins will never DM you with offers of free money or technical assistance. Pay close attention to _user display name_ and _user ID_ you chat with to avoid [impostors](https://twitter.com/GrapheneOS/status/1365881076229488641). Tell your friends to stay vigilant, too.
 
 Selected Reddit posts:
 
@@ -348,9 +347,10 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- maybe https://twitter.com/_Checkmatey_/status/1357829662576054272
-- @behindtext keeps reminding [why](https://twitter.com/behindtext/status/1363118198749597698) we are still here
-- https://twitter.com/cburniske/status/1362146220123201536
+- @jy-p reminds [why](https://twitter.com/behindtext/status/1363118198749597698) we are still here
+- another great [thread](https://twitter.com/cburniske/status/1362146220123201536) from @cburniske
+
+> As someone who's followed @decredproject since 2016, the strength of its community, fundamentals, and market traction thus far in 2021 has surprised even me. ([@cburniske](https://twitter.com/cburniske/status/1362146231116460032))
 
 ## Markets
 
