--- a/journal/202102.md
+++ b/journal/202102.md
@@ -354,17 +354,13 @@ Selected Twitter discussions:
 
 ## Markets
 
-In February DCR was trading between USD 66.95-169.9 / BTC 0.00186-0.0030. The average daily rate was $113.76.
+In February DCR was trading between USD 66.95-169.90 / BTC 0.0018-0.0030. The average daily rate was $113.76.
 
-{ markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
+@Checkmate posted a [mega](https://twitter.com/_Checkmatey_/status/1358968202898755584) on-chain thread with many (all?) indicators going ATH. Feb 9 prediction "I would be surprised if the train slows down from here, it's just not in character!" was correct.
 
-https://twitter.com/marco_peereboom/status/1357126633812070403 {Gone?}
+Unusually large bids have been [observed](https://twitter.com/_Checkmatey_/status/1363709306885922826) on Binance.
 
-https://twitter.com/_Checkmatey_/status/1358968202898755584 {Gone?}
-
-https://twitter.com/_Checkmatey_/status/1363709306885922826 {Gone?}
-
-Feb's trading volume at [DCRDEX](https://dex.decred.org/) was 390K DCR and 1K BTC. The price varied between 0.0019-0.0030 with the average of 0.0026.
+[DCRDEX](https://dex.decred.org/) has traded 390K DCR and 1K BTC in February. The price varied between 0.0019-0.0030 with the average of 0.0026.
 
 ## Relevant External
 
