--- a/journal/202102.md
+++ b/journal/202102.md
@@ -7,7 +7,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 { introduction, major news of the month ordered by impact, don't put any links here }
 
 - { 1.6.1 }
-- { pos and pow upgraded, using the "pos stick", vote locked in }
+- { pos and pow upgraded, using the "pos stick", vote locked in, started }
 - { props approved }
 - { dcrdex 0.1.5 patch }
 - { maybe some on-chain goodies like PoS% or mixed% }
@@ -23,13 +23,15 @@ https://github.com/decred/decred-binaries/releases/tag/v1.6.1
 
 https://www.reddit.com/r/decred/comments/m3k31o/161_things_ive_learned/
 
-## Upcoming Consensus Change
+## Consensus Change Vote Active!
 
 { prepare to vote, set your vote choices for existing tickets and new tickets via dcrwallet|decrediton|legacy vsp }
 
 https://www.reddit.com/r/decred/comments/lu1af0/psa_upcoming_decentralized_treasury_consensus/
 
-https://voting.decred.org/
+https://voting.decred.org/ { looks odd }
+
+https://explorer.dcrdata.org/agenda/treasury
 
 ## Development
 
@@ -366,15 +368,13 @@ Unusually large bids have been [observed](https://twitter.com/_Checkmatey_/statu
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
 
-Yearn Finance was February's largest DeFi [Fail](https://cryptobriefing.com/hacker-spends-8-3-million-fees-attack-yearn-finance/), with a flash loan attack exploiting its users for $11 million. In an interesting development for this kind of attack, most of the exploited funds were paid in [fees](https://twitter.com/FrankResearcher/status/1357639434380992512/photo/1) to various liquidity pools and staking services, with just $2.7 million ending up in the attacker's pocket, and the rest presumably fuelling the DeFi economy. The victims of the attack have been [compensated](https://twitter.com/iearnfinance/status/1359108691677614080?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1359108691677614080%7Ctwgr%5E%7Ctwcon%5Es1_c10&ref_url=https%3A%2F%2Fcointelegraph.com%2Fnews%2Fyearn-finance-puts-expanded-treasury-to-use-by-repaying-victims-of-11m-hack) from the new pool of Treasury funds that was recently minted - within 4 days of the hack the Yearn team were able to mobilize 9.7 million DAI to distribute, and no token voting was required. YFI and the Treasury are currently under the direct control of the Multisig holders, and that "empowerment" is being [extended](https://gov.yearn.finance/t/yip-59-temporarily-extend-multisig-empowerment/9746) until May 24.
+Yearn Finance was February's largest DeFi [Fail](https://cryptobriefing.com/hacker-spends-8-3-million-fees-attack-yearn-finance/), with a flash loan attack exploiting its users for $11 million. In an interesting development for this kind of attack, most of the exploited funds were paid in [fees](https://twitter.com/FrankResearcher/status/1357639434380992512) to various liquidity pools and staking services, with just $2.7 million ending up in the attacker's pocket, and the rest presumably fuelling the DeFi economy. The victims of the attack have been [compensated](https://twitter.com/iearnfinance/status/1359108691677614080) from the new pool of Treasury funds that was recently minted - within 4 days of the hack the Yearn team were able to mobilize 9.7 million DAI to distribute, and no token voting was required. YFI and the Treasury are currently under the direct control of the Multisig holders, and that "empowerment" is being [extended](https://gov.yearn.finance/t/yip-59-temporarily-extend-multisig-empowerment/9746) until May 24.
 
 Yearn Finance is also [changing](https://gov.yearn.finance/t/yip-56-buyback-and-build/8929) up its Treasury and governance funding model [significantly](https://gov.yearn.finance/t/yip-56-buyback-and-build/8929), major changes include scrapping YFI staking because of its uncompetitive yield and instead switching to a buyback model and allowing YFI holders who have deployed their tokens in a liquidity pool to also use them to vote. 
 
-Bitcoin developers are in the [process](https://twitter.com/AndreCronjeTech/status/1359934584612212738) of deciding how the [Taproot](https://bitcoinmagazine.com/technical/taproot-coming-what-it-and-how-it-will-benefit-bitcoin) upgrade should be activated, with the point of contention being whether the Bitcoin Core update should ship with a setting that has it activating at the end of the signalling period regardless of whether the supermajority threshold is met (like the User Activated Soft Fork) or take a more cautious approach and avoid forcing the issue initially. Miner signalling for the month to Mar 2 showed 89% support for Taproot from pools according to their hashrate.
+Bitcoin developers are in the [process](https://twitter.com/AndreCronjeTech/status/1359934584612212738) of deciding how the [Taproot](https://bitcoinmagazine.com/technical/taproot-coming-what-it-and-how-it-will-benefit-bitcoin) upgrade should be activated, with the point of contention being whether the Bitcoin Core update should ship with a setting that has it activating at the end of the signalling period regardless of whether the supermajority threshold is met (like the User Activated Soft Fork) or take a more cautious approach and avoid forcing the issue initially. Miner signalling for the month to Mar 2 showed 89% support for Taproot from pools according to their hashrate. Additionally, Poolin contributed a consensus effort [compiling](https://taprootactivation.com/) pools' sentiment and preferred activation methods.
 
-{ BTC Taproot fans have to survey mining pools and rely on tweets to measure sentiment https://taprootactivation.com/ }
-
-ProgPoW tension https://twitter.com/_Checkmatey_/status/1366831390424068098
+Ethereum's ProgPoW tensions have found an [expression](https://twitter.com/_Checkmatey_/status/1366831390424068098) in miners' hashrate which signals 61% opposition and only 14% support as of Feb. { interesting claims in comments, [this](https://nitter.snopyta.org/iamDCinvestor/status/1366746473535332360) says such signaling is unreliable and [this](https://nitter.snopyta.org/Tetranode/status/1366818706706165762) predicts a scenario involving DeFi and claims that MakerDAO and AAVE back EIP-1559. I don't have context to understand, we can move this to Mar to cover all that if its interesting }
 
 The New York Attorney General reached a [settlement](https://www.reuters.com/article/new-york-ifinex-settlement/bitfinex-tether-owner-pays-18-5-mln-fine-to-settle-nyag-cryptocurrency-cover-up-charges-idUSL1N2KT16E) on charges against Tether and Bitfinex which saw the company pay $18.5 million fine but avoid having to admit to any wrongdoing.
 
@@ -385,8 +385,6 @@ The New York Attorney General reached a [settlement](https://www.reuters.com/art
 { relevant exchanges and websites }
 
 The Central Bank of Nigeria has moved to remind banks that "dealing in cryptocurrencies or facilitating payments for cryptocurrency exchanges is prohibited" and [instructed](https://www.coindesk.com/nigerias-central-bank-orders-banks-to-close-accounts-of-all-crypto-users) them to close the accounts of all people and entities who trade in cryptocurrencies.
-
-Taking KYC to the next level https://cointelegraph.com/news/dutch-bitcoin-exchange-drags-central-bank-to-court-over-wallet-kyc-rule { see if newer stories happened in this area }
 
 { other: regulations, privacy, security, fun }
 
