--- a/journal/202102.md
+++ b/journal/202102.md
@@ -15,21 +15,23 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 ## v1.6.1 Patch Release
 
-This [release](https://twitter.com/decredproject/status/1364636813168693252) includes many bug fixes and UX improvements for dcrd, dcrwallet, Decrediton and dcrdex. Most changes have been focused on fixing issues with new VSP staking system and how it works together with mixing.
+This [release](https://twitter.com/decredproject/status/1364636813168693252) includes many bug fixes and UX improvements for dcrd, dcrwallet, Decrediton and dcrdex. Most changes have been focused on fixing issues with new VSP staking system and how it works together with mixing. Importantly, it allows Decrediton users to set consensus vote choices with both legacy and new VSP.
 
 Get the full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.1), or read their compressed overview in the sections below. As always, respect the signature [verification](https://docs.decred.org/advanced/verifying-binaries/) ritual to ensure you'll run exactly what was packaged by the devs.
 
 There are still some rough edges and points of confusion in the new VSP + mixing combo, compiled in this helpful [post](https://www.reddit.com/r/decred/comments/m3k31o/161_things_ive_learned/) by u/mowmowbeans.
 
-## Consensus Change Vote Active!
+## Vote on the New Consensus!
 
-{ prepare to vote, set your vote choices for existing tickets and new tickets via dcrwallet|decrediton|legacy vsp }
+Voting to activate the new decentralized treasury has started on Mar 12 and will run until Apr 9.
 
-https://www.reddit.com/r/decred/comments/lu1af0/psa_upcoming_decentralized_treasury_consensus/
+To get informed, read the original [proposal](https://proposals.decred.org/proposals/c96290a) and the technical [spec](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki).
 
-https://voting.decred.org/ { looks odd }
+{ was it also covered in the recent DiD with @matheusd https://www.youtube.com/watch?v=BdTLKAassvc ? mention if yes }
 
-https://explorer.dcrdata.org/agenda/treasury
+If you haven't set your voting preferences yet, please [do so now](https://www.reddit.com/r/decred/comments/lu1af0/psa_upcoming_decentralized_treasury_consensus/) so your desired vote is cast when any of your tickets vote. The correct id for the new vote is `treasury`.
+
+To watch how the voting unfolds see the voting [dashboard](https://voting.decred.org/) or the more detailed [agenda page](https://explorer.dcrdata.org/agenda/treasury) at dcrdata.
 
 ## Development
 
