--- a/journal/202102.md
+++ b/journal/202102.md
@@ -15,9 +15,9 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 ## v1.6.1 Patch Release
 
-The new [release](https://twitter.com/decredproject/status/1364636813168693252) includes bug fixes and UX improvements for dcrd, dcrwallet, Decrediton and dcrdex. Most changes have been addressing issues with new VSP staking and how it plays together with mixing. Importantly, it allows Decrediton users to set consensus vote choices with both legacy and new VSP.
+The new [release](https://twitter.com/decredproject/status/1364636813168693252) includes bug fixes and UX improvements for dcrd, dcrwallet, Decrediton, and dcrdex. Most changes have been addressing issues with the new VSP staking and how it plays together with mixing. Importantly, it allows Decrediton users to set consensus vote choices with both legacy and new VSP.
 
-Get the full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.1), or read compressed overview of changes in the sections below. As always, respect the signature [verification](https://docs.decred.org/advanced/verifying-binaries/) ritual to ensure you'll run exactly what was packaged by the devs.
+Get the full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.6.1), or read the compressed overview of changes in the sections below. As always, respect the signature [verification](https://docs.decred.org/advanced/verifying-binaries/) ritual to ensure you'll run exactly what was packaged by the devs.
 
 There are still some rough edges in the new VSP + mixing combo, check this [post](https://www.reddit.com/r/decred/comments/m3k31o/161_things_ive_learned/) by u/mowmowbeans to learn about the workarounds.
 
@@ -223,7 +223,7 @@ Notable changes detected for the [tracked](https://github.com/decredcommunity/so
 
 ## Governance
 
-In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,444 DCR and spent 3,010 DCR (actually payments didn't go out until Mar 2). Using February's daily average DCR/USD rate of $113.76, this is $1.2M received and $342K spent. At January's average daily rate of $54.25, the USD figure billed for past work is $163K. As of Mar 3, Treasury balance is 653,000 DCR (97.2 million USD at $148.86).
+In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 10,444 DCR and spent 3,010 DCR (actually payments didn't go out until Mar 2). Using February's daily average DCR/USD rate of $113.76, this is $1.2M received and $342K spent. At January's average daily rate of $54.25, the USD figure billed for past work is $163K. As of Mar 3, the Treasury balance is 653,000 DCR (97.2 million USD at $148.86).
 
 After the record-breaking turnout for two proposals at the start of Feb (covered in the [last issue](202101.md#governance)), the rest of the month was relatively quiet, with two further proposals being approved.
 
@@ -249,13 +249,13 @@ It looks like we are [breaking](https://twitter.com/michae2xl/status/13596097235
 
 Nodes: Throughout February there was around 220 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes). Average version distribution from dcr.farm: 35% dcrd v1.6.0, 10% dcrd v1.6.1, 10% dcrd v1.5.2, 7% dcrd v1.5.1, 5% dcrd v1.6 dev and RC builds, 4% dcrd v1.7 dev builds, 2% dcrd v1.5.0, 1.5% dcrd v1.5 dev and RC builds, 9% dcrwallet v1.6.0, 4% dcrwallet v1.6.1, 3% dcrwallet v1.5.1, ~9% others.
 
-[charts.dcr.farm](https://charts.dcr.farm/) has been shut down due to low demand and high operating costs to keep it running in a sustainable way. We thank the operators ({}) for all the network insights shared over the years. dcr.farm's legacy and new [VSP](https://dcr.farm/) is still operational.
+[charts.dcr.farm](https://charts.dcr.farm/) has been shut down due to low demand and high operating costs to keep it running in a sustainable way. We thank the operators ({}) for all the network insights shared over the years. dcr.farm's legacy and new [VSP](https://dcr.farm/) are still operational.
 
 The share of [mixed coins](https://explorer.dcrdata.org/charts?chart=coin-supply&zoom=jzk7rn6n-kmfblq6m&bin=day&axis=time&visibility=true-true-true) has grown from 31% to 38% in Feb alone, possibly thanks to the GUI for it added in v1.6. [@CoinShuffle_BOT](https://twitter.com/CoinShuffle_BOT) posts mixing stats daily.
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) had 30 nodes (+2), 56 channels (+9) with a total capacity of 16.8 DCR (+8.5), as of Mar 1.
 
-@matheusd shared some ticket splitting [stats](https://www.reddit.com/r/decred/comments/lj2her/og_ticket/gnj3zqq/): over almost 3 years 2,679 split tickets were purchased at an average rate of 81/month, meaning that roughly 0.2% tickets are being split. This was discussed in context of v1.6 and the new vspd staking where ticket splitting is currently not supported. A new protocol and a rewrite of both server and client are required to support it with vspd, which is unlikely to happen at this time given the low demand.
+@matheusd shared some ticket splitting [stats](https://www.reddit.com/r/decred/comments/lj2her/og_ticket/gnj3zqq/): over almost 3 years 2,679 split tickets were purchased at an average rate of 81/month, meaning that roughly 0.2% of tickets are being split. This was discussed in the context of v1.6 and the new vspd staking where ticket splitting is currently not supported. A new protocol and a rewrite of both server and client are required to support it with vspd, which is unlikely to happen at this time given the low demand.
 
 ## Integrations
 
@@ -263,7 +263,7 @@ Three VSPs have enabled support for the new vspd staking: [decredvoting.com](htt
 
 The [VSP listing](https://decred.org/vsp/) was updated to show vspd tickets in addition to the legacy ones. As of Mar 1, vspd servers held 4.4K live tickets, or 11% of the target ticket pool. Legacy VSP servers held 6.5K live tickets, or 16% of the target.
 
-[SwapSwop.io](https://swapswop.io/) exchange platform came to [say hi](https://www.reddit.com/r/decred/comments/lfgr64/buy_dcr_at_swapswopio_a_crypto_exchange_platform/) on r/decred and answered a few questions about liquidity sources, jurisdiction and their KYC processes. DCR was [listed](https://twitter.com/swapswopio/status/1308107303032369152) in Sep 2020.
+[SwapSwop.io](https://swapswop.io/) exchange platform came to [say hi](https://www.reddit.com/r/decred/comments/lfgr64/buy_dcr_at_swapswopio_a_crypto_exchange_platform/) on r/decred and answered a few questions about liquidity sources, jurisdiction, and their KYC processes. DCR was [listed](https://twitter.com/swapswopio/status/1308107303032369152) in Sep 2020.
 
 A new [#services](https://chat.decred.org/#/room/#services:decred.org) public chat room welcomes everyone to collect information about the growing Decred ecosystem (exchanges, payment processors, VSPs - anything).
 
@@ -273,11 +273,12 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 Several Decred contributors answered all kinds of questions in Decred AMA on [r/CryptoCurrency](https://www.reddit.com/r/CryptoCurrency/comments/lqlone/decred_ama_ask_us_about_privacy_daos_lightning/). The thread got 171 comment and 140 upvotes.
 
-@elima\_iii has started the second season of Decred in Depth series, featuring new guests and more community engagement. Questions to guests are collected [on Twitter](https://twitter.com/elima_iii/status/1363280047059132417) (even more for the [@matheusd](https://twitter.com/elima_iii/status/1365424755906670595) episode), video of bost host and guest is available and YouTube is the primary location now.
+@elima\_iii has started the second season of the Decred in Depth series, featuring new guests and more community engagement. Questions to guests are collected [on Twitter](https://twitter.com/elima_iii/status/1363280047059132417) (even more for the [@matheusd](https://twitter.com/elima_iii/status/1365424755906670595) episode), video of bost host and guest is available and YouTube is the primary location now.
 
 @pavel shared an [updated](https://github.com/decredcommunity/proposals/blob/master/proposals/2bf72e/updates/20210208.md) for the withDecred [proposal](https://proposals.decred.org/proposals/2bf72e6):
 
 > Due to the massive price action in last weeks, I've suspended the giveaways as it seems no longer necessary to generate social buzz. At the time of activity, [@withDecred](https://twitter.com/withdecred) Twitter account had around 100K impressions monthly and generated some good conversations (and some shilling as well). (...) I'm now thinking how to go forward from here with WithDecred activities (web + Twitter), for the moment I'm supporting community-created content. If you have some suggestions, feel free to ping me [here](https://chat.decred.org/#/room/#proposals:decred.org) or on [Twitter](https://twitter.com/paveldcr).
+
 
 Monde PR's achievements for February:
 
@@ -289,16 +290,16 @@ Monde PR's achievements for February:
 
 Attended:
 
-- Feb 3 - [Decred 5 Years Giveaway](https://decredcommunity.github.io/events/index/20210203.1) - Internet. Decred in Spanish team organized a sophisticated giveaway to mark Decred's 5th anniversary. A total of $130 in DCR was awarded for various tasks like retweets, answering questions (after digging some [dcrdata](https://explorer.dcrdata.org/)), answering "what do you like about Decred?", or competing in a meme contest. This activity engaged more than 60 people, generated over 57K Twitter impressions and onboarded 100+ Twitter followers and 40+ [Telegram](https://t.me/DecredES) users. Details in the [report](https://decredcommunity.github.io/events/index/20210203.1).
-- Feb 6 - [Blockchain, AI and Big Data](https://decredcommunity.github.io/events/index/20210206.1) - Casablanca, Morocco. @arij and OMJD organized an event to mark Decred's 5th anniversary. There were 3 talks on machine learning, big data and blockchains. In the latter, @arij talked about how Decred blockchain was used in Brazil municipal elections. 20 people were expected but 40 have showed up, and ~500 have watched the live. At the end there was a small celebration of the anniversary _(involving... hold on)_
-- Feb 9 - [Decred intro and features](https://decredcommunity.github.io/events/index/20210209.1) - Internet. @michae2xl was invited by Monnos (Brazilian exchange that listed DCR in [January](202101.md#integrations)) to introduce Decred in an Instagram livestream. Together with Rodrigo Soeiro (CEO) they have addressed new people in the space, showed Decred's products and discussed their potential.
+- Feb 3 - [Decred 5 Years Giveaway](https://decredcommunity.github.io/events/index/20210203.1) - Internet. Decred in Spanish team organized a sophisticated giveaway to mark Decred's 5th anniversary. A total of $130 in DCR was awarded for various tasks like retweets, answering questions (after digging some [dcrdata](https://explorer.dcrdata.org/)), answering "what do you like about Decred?", or competing in a meme contest. This activity engaged more than 60 people, generated over 57K Twitter impressions, and onboarded 100+ Twitter followers and 40+ [Telegram](https://t.me/DecredES) users. Details in the [report](https://decredcommunity.github.io/events/index/20210203.1).
+- Feb 6 - [Blockchain, AI and Big Data](https://decredcommunity.github.io/events/index/20210206.1) - Casablanca, Morocco. @arij and OMJD organized an event to mark Decred's 5th anniversary. There were 3 talks on machine learning, big data, and blockchains. In the latter, @arij talked about how Decred blockchain was used in Brazil municipal elections. 20 people were expected but 40 showed up, and ~500 watched it live. In the end, there was a small celebration of the anniversary _(involving... hold on)_
+- Feb 9 - [Decred intro and features](https://decredcommunity.github.io/events/index/20210209.1) - Internet. @michae2xl was invited by Monnos (Brazilian exchange that listed DCR in [January](202101.md#integrations)) to introduce Decred in an Instagram livestream. Together with Rodrigo Soeiro (CEO) they have addressed new people in the space, showed Decred's products, and discussed their potential.
 - Feb 20 - [Alternative Consensus: Let’s Talk PoS](https://decredcommunity.github.io/events/index/20210220.1) - Internet. @elian talked all things Decred with [Criptodemia](https://twitter.com/criptodemia) and [Kevin Negocios](https://twitter.com/KevinNegocios) from [Veinte Exchange](https://twitter.com/Veinte_ven) of Venezuela in a 1+ hour livestream.
 
 { you know what pic to insert here! }
 
 Upcoming:
 
-- Mar 12-14 - [Hackathon Nayarit 2021](https://www.facebook.com/EduNayarit/posts/2982126628674008) - Internet. Decred in Spanish will sponsor the hackathon organized be the Ministry of Education of Nayarit. To prepare participants, the Spanish team hosted Blockchain Education training week, consisting of 5 webinars.
+- Mar 12-14 - [Hackathon Nayarit 2021](https://www.facebook.com/EduNayarit/posts/2982126628674008) - Internet. Decred in Spanish will sponsor the hackathon organized by the Ministry of Education of Nayarit. To prepare participants, the Spanish team hosted Blockchain Education training week, consisting of 5 webinars.
 
 ## Media
 
@@ -306,7 +307,7 @@ Selected articles:
 
 - Decred v1.6 with co-founder & project lead, Jake Yocom-Piatt ([coinscrum.com](https://www.coinscrum.com/decred-with-jake-yocom-piatt/)) - a Jan video reworked into an article, compares the new treasury code to "minimally complex hardwired smart contact" and explains key features of v1.6 in simple terms
 
-DCRDEX was listed among top DEX project in Jan research [report](https://xangle.io/research/600a3251b7cb8c849dfa26b9) by Xangle.
+DCRDEX was listed among the top DEX project in the January research [report](https://xangle.io/research/600a3251b7cb8c849dfa26b9) by Xangle.
 
 Videos:
 
@@ -325,7 +326,7 @@ Art and fun:
 
 - @karamble's Decred v1.6 digital [promo](https://twitter.com/karamblez/status/1356921573647745024) clip _(try spotting "taco"!)_
 - glitchy and loud 5th anniversary [clip](https://twitter.com/New_Copernicus/status/1357574854535487488) by @New\_Copernicus
-- the ultimate explanation how [atomic swaps](https://twitter.com/RichardRed0x/status/1356719226724220930) work by @richardred
+- the ultimate explanation of how [atomic swaps](https://twitter.com/RichardRed0x/status/1356719226724220930) work by @richardred
 - [The Rewards](https://www.reddit.com/r/decred/comments/lfxqef/the_rewards/) by @AGNFAB1
 - "I wish to be [irrisistible](https://twitter.com/Decred_ES/status/1358855083396653062) to men!"
 - introducing [Decred Pączki](https://twitter.com/LolekBolek74/status/1359866192538787843) (doughnuts)
@@ -366,11 +367,11 @@ In February DCR was trading between USD 66.95-169.90 / BTC 0.0018-0.0030. The av
 
 Unusually large bids have been [observed](https://twitter.com/_Checkmatey_/status/1363709306885922826) on Binance.
 
-[DCRDEX](https://dex.decred.org/) has traded 390K DCR and 1K BTC in February. The price varied between 0.0019-0.0030 with the average of 0.0026.
+[DCRDEX](https://dex.decred.org/) has traded 390K DCR and 1K BTC in February. The price varied between 0.0019-0.0030 with an average of 0.0026.
 
 ## Relevant External
 
-Yearn Finance was February's largest DeFi [Fail](https://cryptobriefing.com/hacker-spends-8-3-million-fees-attack-yearn-finance/), with a flash loan attack exploiting its users for $11 million. In an interesting development for this kind of attack, most of the exploited funds were paid in [fees](https://twitter.com/FrankResearcher/status/1357639434380992512) to various liquidity pools and staking services, with just $2.7 million ending up in the attacker's pocket, and the rest presumably fuelling the DeFi economy. The victims of the attack have been [compensated](https://twitter.com/iearnfinance/status/1359108691677614080) from the new pool of Treasury funds that was recently minted - within 4 days of the hack the Yearn team were able to mobilize 9.7 million DAI to distribute, and no token voting was required. YFI and the Treasury are currently under the direct control of the Multisig holders, and that "empowerment" is being [extended](https://gov.yearn.finance/t/yip-59-temporarily-extend-multisig-empowerment/9746) until May 24.
+Yearn Finance was February's largest DeFi [Fail](https://cryptobriefing.com/hacker-spends-8-3-million-fees-attack-yearn-finance/), with a flash loan attack exploiting its users for $11 million. In an interesting development for this kind of attack, most of the exploited funds were paid in [fees](https://twitter.com/FrankResearcher/status/1357639434380992512) to various liquidity pools and staking services, with just $2.7 million ending up in the attacker's pocket, and the rest presumably fuelling the DeFi economy. The victims of the attack have been [compensated](https://twitter.com/iearnfinance/status/1359108691677614080) from the new pool of Treasury funds that were recently minted - within 4 days of the hack the Yearn team were able to mobilize 9.7 million DAI to distribute, and no token voting was required. YFI and the Treasury are currently under the direct control of the Multisig holders, and that "empowerment" is being [extended](https://gov.yearn.finance/t/yip-59-temporarily-extend-multisig-empowerment/9746) until May 24.
 
 Yearn Finance is also [changing](https://gov.yearn.finance/t/yip-56-buyback-and-build/8929) up its Treasury and governance funding model [significantly](https://gov.yearn.finance/t/yip-56-buyback-and-build/8929), major changes include scrapping YFI staking because of its uncompetitive yield and instead switching to a buyback model and allowing YFI holders who have deployed their tokens in a liquidity pool to also use them to vote. 
 
